--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-embed": "^1.1.1",
     "gulp-inline-base64": "^0.1.5",
     "gulp-prettier": "^3.0.0",
+    "gulp-remove-html-comments": "^1.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sass-inline-svg": "^1.0.3",
