--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gulp-remove-html-comments": "^1.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-sass-inline-svg": "^1.0.3",
+    "gulp-sass-inline-svg": "chriswburke/gulp-sass-inline-svg#master",
     "gulp-size": "^3.0.0",
     "gulp-watch": "^5.0.1",
     "http-server": "^0.12.3",
