--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "gulp-watch": "^5.0.1",
     "http-server": "^0.12.3",
     "marked": "^1.2.0",
-    "merge-stream": "^2.0.0"
+    "merge-stream": "^2.0.0",
+    "prettier": "^2.1.2"
   },
   "browserslist": [
     "last 2 Chrome versions",
